fixed line-height, letter-spacing, font-size etc.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,34 +2,29 @@
   --main-text-color: #757575;
   --main-title-color: #212121;
   --title-and-background-white: #ffffff;
-  --whitish-background: #f5f5f5;
   --accent-blue-color: #2196f3;
   --logo-header-color: #000000;
   --background-dark: #2f303a;
   --background-grayish: #f5f4fa;
+  --footer-contacts-color: rgba(255, 255, 255, 0.6);
 }
 
 body {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.71;
   letter-spacing: 0.03em;
-  background-color: var(--whitish-background);
   color: var(--main-text-color);
 }
 
 /* Navigation */
 
-.header {
-  background-color: var(--title-and-background-white);
-}
-
 .logo-header {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
   text-decoration: none;
   color: var(--logo-header-color);
 }
@@ -41,7 +36,7 @@ body {
 .nav-page,
 .contact-header {
   font-weight: 500;
-  line-height: 1;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
@@ -73,7 +68,7 @@ body {
   color: var(--title-and-background-white);
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.3;
+  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -85,17 +80,13 @@ body {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.8;
+  line-height: 1.87;
   letter-spacing: 0.06em;
   text-align: center;
   cursor: pointer;
 }
 
 /* Features Section */
-
-.features-section {
-  background-color: var(--whitish-background);
-}
 
 .list {
   list-style: none;
@@ -105,7 +96,7 @@ body {
   color: var(--main-title-color);
   font-weight: 700;
   font-size: 14px;
-  line-height: 1;
+  line-height: 1.14;
   text-transform: uppercase;
 }
 
@@ -113,7 +104,8 @@ body {
   color: var(--main-title-color);
   font-weight: 700;
   font-size: 36px;
-  line-height: 1;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -125,22 +117,21 @@ body {
   background-color: var(--background-grayish);
 }
 
-.team-section h3 {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1;
-  text-align: center;
-}
-
-.team-section p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1;
-  text-align: center;
-}
-
 .team-member {
   color: var(--main-title-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.members-role {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
 }
 
 /* Footer */
@@ -150,22 +141,23 @@ body {
 }
 
 .logo-footer {
+  color: var(--title-and-background-white);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
   text-decoration: none;
-  color: var(--title-and-background-white);
 }
 
 .address {
+  color: var(--title-and-background-white);
   text-decoration: none;
   font-style: normal;
-  color: var(--title-and-background-white);
 }
 
 .contact-footer {
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--footer-contacts-color);
   font-style: normal;
   text-decoration: none;
 }
@@ -177,7 +169,8 @@ body {
   background-color: var(--background-grayish);
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
   text-align: center;
   cursor: pointer;
 }
@@ -198,5 +191,7 @@ body {
 }
 
 .sample-description {
-  line-height: 1.8;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
 }
